Evaluation improvements.